@@ -1,5 +1,5 @@
 group 'com.softwareverde'
-version '1.3.3'
+version '2.0.0'
 
 apply plugin: 'java'
 apply plugin: 'java-library'
@@ -21,11 +21,15 @@ repositories {
 }
 
 dependencies {
-    api                 group: 'com.github.softwareverde',  name: 'java-constable', version: '16b12293df'
-    implementation      group: 'com.github.softwareverde',  name: 'java-logging',   version: 'ca7585f098'
+    implementation      group: 'com.github.softwareverde',  name: 'java-logging',   version: 'v1.0.0'
 
     testImplementation  group: 'junit',                     name: 'junit',          version: '4.11'
-    testImplementation  group: 'com.github.softwareverde',  name: 'java-constable', version: 'v0.3.4'
+}
+
+test {
+    maxHeapSize = "4096m"
+    jvmArgs "-XX:MaxPermSize=4096m"
+    jvmArgs "-XX:MaxMetaspaceSize=4096m"
 }
 
 tasks.withType(Test) {
